[package]
name = "pngstore"
version = "0.1.0"
edition = "2021"
authors = ["Brandon T Jardine"]
readme = "README.md"
license = "GPL-3.0-or-later"

[profile.release]
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image = "0"
